changed navbar color, added goose background, fixed overflow

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,24 @@
 *{
     box-sizing: border-box;
 }
-h2.title{
 
+.hamburger-button:focus{
+    outline: none;
+}
+
+nav{
+    background-color: black;
+    color: black;
+}
+
+header{
+    background: url('/img/goose.png');
+    background-size: 30%;
+    background-repeat: no-repeat;
+    background-position-y: bottom;
+}
+
+h2.title{
     border-bottom: solid 1px black;
     margin: 0%;
     padding: 0%;
@@ -10,21 +26,23 @@ h2.title{
     width: 200px;
     margin: auto;
     margin-bottom: 10px;
-
 }
+
 .skills{
     background: url("/img/skills-bg.png");
     background-repeat: repeat-y;
     background-position-x: right;
     background-color: #53a551;
 }
+
 div.skill{
     box-shadow: -11px 10px 13px -5px rgba(0,0,0,0.37);
-    
 }
+
 div.skill:hover{
     box-shadow: -11px 10px 13px 0px rgba(0,0,0,0.37);
 }
+
 /* section.myart{
     background: url("/img/paint.png");
     background-repeat: no-repeat;
@@ -34,12 +52,15 @@ body{
     overflow-x: hidden;
     position: relative;
 }
+
 section.instagram{
     background: url("/img/insta.png");
 }
+
 section.collection{
     min-height: 100vh;
 }
+
 section{
     padding-top: 70px;
     padding-bottom: 80px;
@@ -93,28 +114,25 @@ h1{
     justify-content: center;
     align-items: center;
 }
+
 .right-b{
     transform: translateX(100%);
-    
-    
+    overflow: hidden;
 }
+
 .left-b{
     transform: translateX(-100%);
-    
-    
+    overflow: hidden;
 }
+
 .slide-from-left{
-    
     animation-name: slideFromLeft;
     animation-duration: 1s;
-    
 }
 
 .slide-from-right{
-    
     animation-name: slideFromRight;
     animation-duration: 1s;
-    
 }
 
 .heart-beat{
@@ -128,29 +146,29 @@ img.img-shadow{
 
 img.img-shadow:hover{
     transform: translateY(-2px);
-    box-shadow: 2px 3px 15px black;
-    
+    box-shadow: 2px 3px 15px black;   
 }
-
 
 .single-image-section{
     background-color: darkslategrey;
     width: 100vw;
     min-height: 100vh;
 }
+
 .btn:hover{
     transform: translateY(-1px) scale(1.01);
 }
+
 .btn:active{
     transform: translateY(2px) scale(0.99);
     outline: none;
 }
+
 .name{
     background-color: black;
     padding: 10px;
     border-radius: 7px;
     color: white;
-    
 }
 
 .description{
@@ -178,6 +196,7 @@ img.img-shadow:hover{
         width: 70%;
     }
 }
+
 @media (min-width: 1080px){
     .content{
         grid-gap: 10px;
@@ -188,6 +207,7 @@ img.img-shadow:hover{
         align-items: center;
     }
 }
+
 @media (max-width: 500px){
     .content{
         grid-gap: 10px;
@@ -222,12 +242,10 @@ img.img-shadow:hover{
     from{
         transform: translateX(-100%);
         opacity: 0;
-        
     }
     to{
         transform: translateX(0);
-        opacity: 1;
-        
+        opacity: 1; 
     }
 }
 
@@ -235,12 +253,9 @@ img.img-shadow:hover{
     from{
         transform: translateX(100%);
         opacity: 0;
-        
     }
     to{
         transform: translateX(0);
         opacity: 1;
-       
     }
 }
-
